Add css for header and refine header html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Colmar Academy</title>
+    <link rel="stylesheet" href="resources/css/reset.css">
+    <link rel="stylesheet" href="resources/css/index.css">
 </head>
 <body>
     <div id="page-content">
@@ -12,11 +14,13 @@
         <header>
             <!-- Desktop Header -->
             <div id="header-desktop">
-                <div id=logo-container>
-                    <img src="resources/images/ic-logo.svg" alt="logo of Colmar Academy">
-                </div>
-                <div id="logo-text-container">
-                    <span id="logo-text-1">Colmar</span><span id="logo-text-2">Academy</span>
+                <div id="logo-container">
+                    <div id=logo-img-container>
+                        <img src="resources/images/ic-logo.svg" alt="logo of Colmar Academy">
+                    </div>
+                    <div id="logo-text-container">
+                        <span id="logo-text-1">Colmar</span><span id="logo-text-2">Academy</span>
+                    </div>
                 </div>
                 <nav>
                     <ul>
