--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
         <header>
             <!-- Desktop Header -->
             <div id="header-desktop">
-                <div id="logo-container">
-                    <div id=logo-img-container>
-                        <img src="resources/images/ic-logo.svg" alt="logo of Colmar Academy">
-                    </div>
-                    <div id="logo-text-container">
-                        <span id="logo-text-1">Colmar</span><span id="logo-text-2">Academy</span>
-                    </div>
-                </div>
                 <nav>
+                    <a href="index.html">
+                        <div class="logo-container">
+                            <div class=logo-img-container>
+                                <img src="resources/images/ic-logo.svg" alt="logo of Colmar Academy">
+                            </div>
+                            <div id="logo-text-container">
+                                <span id="logo-text-1">Colmar</span><span id="logo-text-2">Academy</span>
+                            </div>
+                        </div>
+                    </a>
                     <ul>
                         <li><a href="#">On campus</a></li>
                         <li><a href="#">Online</a></li>
@@ -30,6 +32,31 @@
                         <li><a href="#">Sign in</a></li>
                     </ul>
                 </nav>
+            </div>
+            <!-- Mobile Header -->
+            <div id="header-mobile">
+                <!-- <div class="logo-container">
+                    <div class="logo-img-container">
+                        <img src="resources/images/ic-logo.svg" alt="logo of Colmar Academy">
+                    </div>
+                </div>
+                <div class="logo-img-container">
+                    <img src="" alt="">
+                </div>
+                <div class="logo-img-container">
+                    <img src="" alt="">
+                </div>
+                <div class="logo-img-container">
+                    <img src="" alt="">
+                </div> -->
+
+                <nav>
+                    <a href="index.html"><img src="resources/images/ic-logo.svg" alt="logo of Colmar Academy"></a>
+                    <a href="#"><img src="resources/images/ic-on-campus.svg" alt="school chair icon"></a>
+                    <a href="#"><img src="resources/images/ic-online.svg" alt="computer monitor icon"></a>
+                    <a href="#"><img src="resources/images/ic-login.svg" alt="stilized person icon"></a>
+                </nav>
+
             </div>
         </header>
 
