--- a/index.html
+++ b/index.html
@@ -35,20 +35,6 @@
             </div>
             <!-- Mobile Header -->
             <div id="header-mobile">
-                <!-- <div class="logo-container">
-                    <div class="logo-img-container">
-                        <img src="resources/images/ic-logo.svg" alt="logo of Colmar Academy">
-                    </div>
-                </div>
-                <div class="logo-img-container">
-                    <img src="" alt="">
-                </div>
-                <div class="logo-img-container">
-                    <img src="" alt="">
-                </div>
-                <div class="logo-img-container">
-                    <img src="" alt="">
-                </div> -->
 
                 <nav>
                     <a href="index.html"><img src="resources/images/ic-logo.svg" alt="logo of Colmar Academy"></a>
@@ -59,6 +45,23 @@
 
             </div>
         </header>
+
+<!-- Intro Section -->
+        <div id="banner">
+            
+            <div class="picture-container">
+                <img src="resources/images/banner.jpg" alt="three students reading and writing at an outside table">
+            </div>
+
+            <div class="textbox">
+                <h1>Learn something new everyday</h1>
+                <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+                <div class="button">
+                    <p>Start here</p>
+                </div>
+            </div>
+
+        </div>
 
     </div>
 </body>
