--- a/index.html
+++ b/index.html
@@ -54,10 +54,12 @@
             </div>
 
             <div class="textbox">
-                <h1>Learn something new everyday</h1>
-                <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                <div class="button">
-                    <p>Start here</p>
+                <div class="vertical-center">
+                    <h1>Learn something new everyday</h1>
+                    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
+                    <div class="button">
+                        <p>Start here</p>
+                    </div>
                 </div>
             </div>
 
