add html for information section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             </div>
         </header>
 
-<!-- Intro Section -->
+        <!-- Banner Section -->
         <div id="banner">
             
             <div class="picture-container">
@@ -63,6 +63,54 @@
                 </div>
             </div>
 
+        </div>
+
+        <!-- Information Section -->
+        <div id="information">
+            <div id="main-article">
+                <div class="picture-container">
+                    <img src="resources/images/information-main.jpg" alt="a man reading a book outside">
+                </div>
+                <h2>It doesn't hurt to keep practicing</h2>
+                <p>"Nec suas ponderum torquatos et, soleat eruditi ius in, euismod ocurreret id mei. Praesent postulant id mea. Per ceteros maiorum id, ut nec amet numquam legendos. Vix error tamquam ne, et mazim definiebas ius. Duo in sumo eripuit. Vix gloriatur scriptorem ut, ne cum appareat definitionem."</p>
+                <p class="author">Emanuel, Sr Strategist at Hiring.com</p>
+            </div>
+            <div class="secondary-article">
+                <div class="picture-container">
+                    <img src="resources/images/information-orientation.jpg" alt="people walking on a footpath shown from high above">
+                </div>
+                <div class="textbox">
+                    <div class="vertical-center">
+                        <h3>Orientation date</h3>
+                        <p>Tue 10/11 & Wed 10/12: 8am - 3pm</p>
+                        <p><a href="#">Read more</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="secondary-article">
+                <div class="picture-container">
+                    <img src="resources/images/information-campus.jpg" alt="people sitting at tables">
+                </div>
+                <div class="textbox">
+                    <div class="vertical-center">
+                        <h3>Our campus</h3>
+                        <p>Find which campus is close by you</p>
+                        <p><a href="#">Read more</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="secondary-article">
+                <div class="picture-container">
+                    <img src="resources/images/information-guest-lecture.jpg" alt="people walking on a footpath shown from high above">
+                </div>
+                <div class="textbox">
+                    <div class="vertical-center">
+                        <h3>Our gues lecture</h3>
+                        <p>Join a keynote with Oliver Sack about music in medical treatment</p>
+                        <p><a href="#">Read more</a></p>
+                    </div>
+                </div>
+            </div>
         </div>
 
     </div>
