add information section mobile version styling

--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@
                     <div class="picture-container">
                         <img src="resources/images/information-orientation.jpg" alt="people walking on a footpath shown from high above">
                     </div>
+                    <div class="picture-container-mobile">
+                        <img src="resources/images/information-orientation-mobile.jpg" alt="people walking on a footpath shown from high above">
+                    </div>
                     <div class="textbox">
                         <div class="vertical-center">
                             <h3>Orientation date</h3>
@@ -92,6 +95,9 @@
                     <div class="picture-container">
                         <img src="resources/images/information-campus.jpg" alt="people sitting at tables">
                     </div>
+                    <div class="picture-container-mobile">
+                        <img src="resources/images/information-campus-mobile.jpg" alt="people sitting at tables">
+                    </div>
                     <div class="textbox">
                         <div class="vertical-center">
                             <h3>Our campus</h3>
@@ -103,6 +109,9 @@
                 <div class="secondary-article">
                     <div class="picture-container">
                         <img src="resources/images/information-guest-lecture.jpg" alt="people walking on a footpath shown from high above">
+                    </div>
+                    <div class="picture-container-mobile">
+                        <img src="resources/images/information-guest-lecture-mobile.jpg" alt="people walking on a footpath shown from high above">
                     </div>
                     <div class="textbox">
                         <div class="vertical-center">
