--- a/index.html
+++ b/index.html
@@ -124,6 +124,73 @@
             </div>
         </div>
 
+        <!-- Courses Section -->
+        <div id="courses">
+            <h2>Start learning</h2>
+            <div id="course-block">
+                <div class="course-box">
+                    <div class="picture-container">
+                        <img src="resources/images/course-software.jpg" alt="desktop computr with two monitors">
+                    </div>
+                    <div class="text-box">
+                        <h3>Software engineering</h3>
+                        <p>Courses</p>
+                        <p>Web Development, Mobile Development, iOT, APIs</p>
+                    </div>
+                </div>
+                <div class="course-box">
+                    <div class="picture-container">
+                        <img src="resources/images/course-computer-art.jpg" alt="a hand holding a smartphone">
+                    </div>
+                    <div class="text-box">
+                        <h3>computer art</h3>
+                        <p>Courses</p>
+                        <p>Imaging and Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+                    </div>
+                </div>
+                <div class="course-box">
+                    <div class="picture-container">
+                        <img src="resources/images/course-design.jpg" alt="professional handheld camera">
+                    </div>
+                    <div class="text-box">
+                        <h3>Design</h3>
+                        <p>Courses</p>
+                        <p>User Experience Design, User Research, Visual Design</p>
+                    </div>
+                </div>
+                <div class="course-box">
+                    <div class="picture-container">
+                        <img src="resources/images/course-data.jpg" alt="a laptop computer diplaying graphs">
+                    </div>
+                    <div class="text-box">
+                        <h3>Data</h3>
+                        <p>Courses</p>
+                        <p>Data Science, Big Data, SQL, Data Visualization</p>
+                    </div>
+                </div>
+                <div class="course-box">
+                    <div class="picture-container">
+                        <img src="resources/images/course-business.jpg" alt="chessboard with chesspieces">
+                    </div>
+                    <div class="text-box">
+                        <h3>Business</h3>
+                        <p>Courses</p>
+                        <p>Product Development, Business Development, Startup</p>
+                    </div>
+                </div>
+                <div class="course-box">
+                    <div class="picture-container">
+                        <img src="resources/images/course-marketing.jpg" alt="smartwatch">
+                    </div>
+                    <div class="text-box">
+                        <h3>Marketing</h3>
+                        <p>Courses</p>
+                        <p>Analytics, Content Marketing, Mobile Marketing</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </div>
 </body>
 </html>
