--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                     <div class="picture-container">
                         <img src="resources/images/course-software.jpg" alt="desktop computr with two monitors">
                     </div>
-                    <div class="text-box">
+                    <div class="textbox">
                         <h3>Software engineering</h3>
                         <p>Courses</p>
                         <p>Web Development, Mobile Development, iOT, APIs</p>
@@ -142,7 +142,7 @@
                     <div class="picture-container">
                         <img src="resources/images/course-computer-art.jpg" alt="a hand holding a smartphone">
                     </div>
-                    <div class="text-box">
+                    <div class="textbox">
                         <h3>computer art</h3>
                         <p>Courses</p>
                         <p>Imaging and Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
@@ -152,7 +152,7 @@
                     <div class="picture-container">
                         <img src="resources/images/course-design.jpg" alt="professional handheld camera">
                     </div>
-                    <div class="text-box">
+                    <div class="textbox">
                         <h3>Design</h3>
                         <p>Courses</p>
                         <p>User Experience Design, User Research, Visual Design</p>
@@ -162,7 +162,7 @@
                     <div class="picture-container">
                         <img src="resources/images/course-data.jpg" alt="a laptop computer diplaying graphs">
                     </div>
-                    <div class="text-box">
+                    <div class="textbox">
                         <h3>Data</h3>
                         <p>Courses</p>
                         <p>Data Science, Big Data, SQL, Data Visualization</p>
@@ -172,7 +172,7 @@
                     <div class="picture-container">
                         <img src="resources/images/course-business.jpg" alt="chessboard with chesspieces">
                     </div>
-                    <div class="text-box">
+                    <div class="textbox">
                         <h3>Business</h3>
                         <p>Courses</p>
                         <p>Product Development, Business Development, Startup</p>
@@ -182,7 +182,7 @@
                     <div class="picture-container">
                         <img src="resources/images/course-marketing.jpg" alt="smartwatch">
                     </div>
-                    <div class="text-box">
+                    <div class="textbox">
                         <h3>Marketing</h3>
                         <p>Courses</p>
                         <p>Analytics, Content Marketing, Mobile Marketing</p>
