--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         <img src="resources/images/course-computer-art.jpg" alt="a hand holding a smartphone">
                     </div>
                     <div class="textbox">
-                        <h3>computer art</h3>
+                        <h3>Computer Art</h3>
                         <p>Courses</p>
                         <p>Imaging and Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
                     </div>
