add more styling for courses section using flex

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <!-- Courses Section -->
         <div id="courses">
             <h2>Start learning</h2>
-            <div id="course-block">
+            <div class="course-block">
                 <div class="course-box">
                     <div class="picture-container">
                         <img src="resources/images/course-software.jpg" alt="desktop computr with two monitors">
@@ -158,6 +158,8 @@
                         <p>User Experience Design, User Research, Visual Design</p>
                     </div>
                 </div>
+            </div>
+            <div class="course-block">
                 <div class="course-box">
                     <div class="picture-container">
                         <img src="resources/images/course-data.jpg" alt="a laptop computer diplaying graphs">
