--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                 <div class="vertical-center">
                     <h1>Learn something new everyday</h1>
                     <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</h3>
-                    <div class="button">
+                    <a href="#"><div class="button">
                         <p>Start here</p>
-                    </div>
+                    </div></a>
                 </div>
             </div>
 
@@ -129,66 +129,78 @@
             <h2>Start learning</h2>
             <div class="course-block">
                 <div class="course-box">
-                    <div class="picture-container">
-                        <img src="resources/images/course-software.jpg" alt="desktop computr with two monitors">
-                    </div>
-                    <div class="textbox">
-                        <h3>Software engineering</h3>
-                        <p>Courses</p>
-                        <p>Web Development, Mobile Development, iOT, APIs</p>
-                    </div>
+                    <a href="#">
+                        <div class="picture-container">
+                            <img src="resources/images/course-software.jpg" alt="desktop computr with two monitors">
+                        </div>
+                        <div class="textbox">
+                            <h3>Software engineering</h3>
+                            <p>Courses</p>
+                            <p>Web Development, Mobile Development, iOT, APIs</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="course-box">
-                    <div class="picture-container">
-                        <img src="resources/images/course-computer-art.jpg" alt="a hand holding a smartphone">
-                    </div>
-                    <div class="textbox">
-                        <h3>Computer Art</h3>
-                        <p>Courses</p>
-                        <p>Imaging and Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
-                    </div>
+                    <a href="#">
+                        <div class="picture-container">
+                            <img src="resources/images/course-computer-art.jpg" alt="a hand holding a smartphone">
+                        </div>
+                        <div class="textbox">
+                            <h3>Computer Art</h3>
+                            <p>Courses</p>
+                            <p>Imaging and Design, Web Design, Motion Graphics & Visual Effects, Computer Animation</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="course-box">
-                    <div class="picture-container">
-                        <img src="resources/images/course-design.jpg" alt="professional handheld camera">
-                    </div>
-                    <div class="textbox">
-                        <h3>Design</h3>
-                        <p>Courses</p>
-                        <p>User Experience Design, User Research, Visual Design</p>
-                    </div>
+                    <a href="#">
+                        <div class="picture-container">
+                            <img src="resources/images/course-design.jpg" alt="professional handheld camera">
+                        </div>
+                        <div class="textbox">
+                            <h3>Design</h3>
+                            <p>Courses</p>
+                            <p>User Experience Design, User Research, Visual Design</p>
+                        </div>
+                    </a>
                 </div>
             </div>
             <div class="course-block">
                 <div class="course-box">
-                    <div class="picture-container">
-                        <img src="resources/images/course-data.jpg" alt="a laptop computer diplaying graphs">
-                    </div>
-                    <div class="textbox">
-                        <h3>Data</h3>
-                        <p>Courses</p>
-                        <p>Data Science, Big Data, SQL, Data Visualization</p>
-                    </div>
+                    <a href="#">
+                        <div class="picture-container">
+                            <img src="resources/images/course-data.jpg" alt="a laptop computer diplaying graphs">
+                        </div>
+                        <div class="textbox">
+                            <h3>Data</h3>
+                            <p>Courses</p>
+                            <p>Data Science, Big Data, SQL, Data Visualization</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="course-box">
-                    <div class="picture-container">
-                        <img src="resources/images/course-business.jpg" alt="chessboard with chesspieces">
-                    </div>
-                    <div class="textbox">
-                        <h3>Business</h3>
-                        <p>Courses</p>
-                        <p>Product Development, Business Development, Startup</p>
-                    </div>
+                    <a href="#">
+                        <div class="picture-container">
+                            <img src="resources/images/course-business.jpg" alt="chessboard with chesspieces">
+                        </div>
+                        <div class="textbox">
+                            <h3>Business</h3>
+                            <p>Courses</p>
+                            <p>Product Development, Business Development, Startup</p>
+                        </div>
+                    </a>
                 </div>
                 <div class="course-box">
-                    <div class="picture-container">
-                        <img src="resources/images/course-marketing.jpg" alt="smartwatch">
-                    </div>
-                    <div class="textbox">
-                        <h3>Marketing</h3>
-                        <p>Courses</p>
-                        <p>Analytics, Content Marketing, Mobile Marketing</p>
-                    </div>
+                    <a href="#">
+                        <div class="picture-container">
+                            <img src="resources/images/course-marketing.jpg" alt="smartwatch">
+                        </div>
+                        <div class="textbox">
+                            <h3>Marketing</h3>
+                            <p>Courses</p>
+                            <p>Analytics, Content Marketing, Mobile Marketing</p>
+                        </div>
+                    </a>
                 </div>
             </div>
         </div>
