--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
         </div>
 
         <!-- Information Section -->
-        <div id="information">
-            <div id="main-article">
+        <div class="information">
+            <div class="main-article">
                 <div class="picture-container">
                     <img src="resources/images/information-main.jpg" alt="a man reading a book outside">
                 </div>
@@ -75,7 +75,7 @@
                 <p>"Nec suas ponderum torquatos et, soleat eruditi ius in, euismod ocurreret id mei. Praesent postulant id mea. Per ceteros maiorum id, ut nec amet numquam legendos. Vix error tamquam ne, et mazim definiebas ius. Duo in sumo eripuit. Vix gloriatur scriptorem ut, ne cum appareat definitionem."</p>
                 <p class="author">Emanuel, Sr Strategist at Hiring.com</p>
             </div>
-            <div id="secondary-block">
+            <div class="secondary-block">
                 <div class="secondary-article">
                     <div class="picture-container">
                         <img src="resources/images/information-orientation.jpg" alt="people walking on a footpath shown from high above">
@@ -115,7 +115,7 @@
                     </div>
                     <div class="textbox">
                         <div class="vertical-center">
-                            <h3>Our guest lecture</h3>
+                            <h2>Our guest lecture</h2>
                             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
                             <p><a href="#">Read more</a></p>
                         </div>
@@ -201,6 +201,45 @@
                             <p>Analytics, Content Marketing, Mobile Marketing</p>
                         </div>
                     </a>
+                </div>
+            </div>
+        </div>
+
+
+        <!-- Thesis Section -->
+        <div id="thesis">
+            <h2>Thesis exhibit</h2>
+            <div class="information">
+                <div id="thesis-video" class="main-article">
+                    <div class="video-container picture-container">
+                        <video src="resources/videos/thesis.mp4" controls>Video not supported</video>
+                    </div>
+                    <h3>Reimagine urban</h3>
+                    <p>Praesent pharetra est at sem fermentum, at suscipit lectus maximus. In pharetra erat vulputate mauris aliquam luctus. Phasellus varius in enim pharetra aliquet. Integer maximus dapibus augue, porta posuere lorem semper ac.</p>
+                </div>
+                <div class="secondary-block">
+                    <div class="secondary-article">
+                        <div class="picture-container">
+                            <img src="resources/images/thesis-fisma.jpg" alt="people walking on a footpath shown from high above">
+                        </div>
+                        <div class="textbox">
+                            <div class="vertical-center">
+                                <h3>Fisma: Design and Prototype</h3>
+                                <p>Designer showcase of new prototype product</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="secondary-article">
+                        <div class="picture-container">
+                            <img src="resources/images/thesis-now-and-then.jpg" alt="people sitting at tables">
+                        </div>
+                        <div class="textbox">
+                            <div class="vertical-center">
+                                <h3>Now and then</h3>
+                                <p>Research study about New York</p>
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
