--- a/index.html
+++ b/index.html
@@ -244,6 +244,16 @@
             </div>
         </div>
 
+
+        <!-- Footer Section -->
+        <footer>
+            <p>&copy; 2020 Colmar Academy. All rights reserved</p>
+            <ul>
+                <li>Terms</li>
+                <li>Privacy</li>
+            </ul>
+        </footer>
+
     </div>
 </body>
 </html>
