add footer html and css

--- a/index.html
+++ b/index.html
@@ -247,11 +247,13 @@
 
         <!-- Footer Section -->
         <footer>
-            <p>&copy; 2020 Colmar Academy. All rights reserved</p>
-            <ul>
-                <li>Terms</li>
-                <li>Privacy</li>
-            </ul>
+            <span>&copy; 2020 Colmar Academy. All rights reserved</span>
+            <nav>
+                <ul>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Privacy</a></li>
+                </ul>
+            </nav>
         </footer>
 
     </div>
