add google fonts and highlighting to some articles

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="secondary-article">
+                <div class="secondary-article highlighted">
                     <div class="picture-container">
                         <img src="resources/images/information-guest-lecture.jpg" alt="people walking on a footpath shown from high above">
                     </div>
@@ -115,7 +115,7 @@
                     </div>
                     <div class="textbox">
                         <div class="vertical-center">
-                            <h2>Our guest lecture</h2>
+                            <h3>Our guest lecture</h2>
                             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
                             <p><a href="#">Read more</a></p>
                         </div>
@@ -218,7 +218,7 @@
                     <p>Praesent pharetra est at sem fermentum, at suscipit lectus maximus. In pharetra erat vulputate mauris aliquam luctus. Phasellus varius in enim pharetra aliquet. Integer maximus dapibus augue, porta posuere lorem semper ac.</p>
                 </div>
                 <div class="secondary-block">
-                    <div class="secondary-article">
+                    <div class="secondary-article highlighted">
                         <div class="picture-container">
                             <img src="resources/images/thesis-fisma.jpg" alt="people walking on a footpath shown from high above">
                         </div>
