--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                         <div class="vertical-center">
                             <h3>Orientation date</h3>
                             <p>Tue 10/11 & Wed 10/12: 8am - 3pm</p>
-                            <p><a href="#">Read more</a></p>
+                            <p class="last-line"><a href="#">Read more</a></p>
                         </div>
                     </div>
                 </div>
@@ -102,7 +102,7 @@
                         <div class="vertical-center">
                             <h3>Our campus</h3>
                             <p>Find which campus is close by you</p>
-                            <p><a href="#">Read more</a></p>
+                            <p class="last-line"><a href="#">Read more</a></p>
                         </div>
                     </div>
                 </div>
@@ -117,7 +117,7 @@
                         <div class="vertical-center">
                             <h3>Our guest lecture</h2>
                             <p>Join a keynote with Oliver Sack about music in medical treatment</p>
-                            <p><a href="#">Read more</a></p>
+                            <p class="last-line"><a href="#">Read more</a></p>
                         </div>
                     </div>
                 </div>
